siril-1.4.0
xx/xx/xx

**Fixes**
* Fixed get_image_history(): now correctly updates history with operations done since loading

siril 1.4.0-RC2
11/20/25

**Fixes**
* Fixed typo in platesolve tooltip
* Fixed error in meson configuration
* Fixed writing registration information for the reference image with global registration (#1849)
* Fixed shared memory leak in set_seq_frame_pixeldata()
* Fixed crash with intel macOS because of a bad pragma simd clause (#1856)
* Updated log messages to avoid double newlines
* Fixed rejection stacking for sequence in 16b (#1858)
* Increase sirilpy timeouts
* Attempted fix for memory allocation issue during stacking on Windows (#1858, #1866)
* Fixed regression in pixelmath where FITS header keywords were not properly copied from the source image to the result (#1851)

siril 1.4.0-RC1
11/08/25

**Fixes:**
* Fixed wrong interpretation of bayer pattern after a background extraction on CFA images (#1799)
* Fixed unnecessary range clipping/scaling prior to RGB channel extraction (#1797)
* Fixed issue with sequence filename construction if com.pref.ext didn't match the seq (#1796)
* Fixed issue where curves tool preview could fail to disapply (#1801)
* Fixed global registration failed to add reference image to the aligned sequence (#1798)
* Fixed PLTSOLVD keyword that was not correctly propagated (#1807)
* Fixed crash in seqstarnet (#1814)
* Fixed seqpsf bug preventing astrometric registration in some circumstances (#1815)
* Fixed writing RA/DEC to star lists from a single findstar command (#1794)
* Fixed issue with RGB composition not always applying registration (!948)
* Fixed processing thread / child process accounting in the "Stop" dialog (#1705)
* Fixed crash in clearstar command wiht Dynamic PSF window open when called from python (#1821)
* Fixed drizzle registration when compression is on (#1800)
* Fixed computing storage space after seqpplyreg to better account for max framing (#1802, #1843)