@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sirilpy"
-version = "1.0.3"
+version = "1.0.5"
 authors = [
   { name = "Team free-astro" },
 ]
